--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -1,5 +1,5 @@
 // site colours
-$text-color: rgb(40,40,40);
+$text-color: red;
 $text-color-negative: white;
 $brand-color: orangered;
 $link-color: rgb(0,114,154);
